# ComputerVisionTests

./: CMakeLists.txt  README.md  compile_commands.json
.github/workflows/: autotests.yml
include/: lab_1.h  math_operations.h
src/: CMakeLists.txt  main.cpp  math_operations.cpp
src/labs/: lab_1.cpp
tests/: CMakeLists.txt  test_math.cpp
tests/labs/: test_lab_1.cpp
